Add eslint react

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
         "es2021": true
     },
     "extends": [
-        // "plugin:react/recommended",
-        // "plugin:react/jsx-runtime",
+        "plugin:react/recommended",
         "standard"
     ],
     "parser": "@typescript-eslint/parser",
@@ -17,9 +16,11 @@
         "sourceType": "module"
     },
     "plugins": [
-        // "react",
+        "react",
         "@typescript-eslint"
     ],
     "rules": {
+      "no-use-before-define": "off",
+      "@typescript-eslint/no-use-before-define": ["error"]
     }
 }
