--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Components utility for ReactJS",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "sideEffects": false,
   "files": [
     "dist"
   ],
@@ -36,8 +37,9 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@types/react": "^17.0.39",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
@@ -52,5 +54,8 @@
     "rollup": "^2.68.0",
     "rollup-plugin-dts": "^4.1.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "react": "^17.0.2"
   }
 }
