Add integration to TravisCI & coveralls

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
+    "test:coveralls": "npm run test -- && coveralls < coverage/lcov.info",
     "test:staged": "npm run test -- --findRelatedTests",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
@@ -65,6 +66,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
+    "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
