--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:staged": "npm run test -- --findRelatedTests",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "predeploy": "npm run build-storybook",
+    "deploy": "gh-pages -d storybook-static"
   },
   "lint-staged": {
     "*.ts": [
@@ -39,7 +41,7 @@
   "bugs": {
     "url": "https://github.com/frasnym/react-component-utility/issues"
   },
-  "homepage": "https://github.com/frasnym/react-component-utility#readme",
+  "homepage": "https://frasnym.github.io/react-component-utility/",
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/plugin-transform-runtime": "^7.17.0",
@@ -74,6 +76,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
