--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-component-utility",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Components utility for ReactJS",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -83,13 +83,11 @@
     "lint-staged": "^12.3.4",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
+    "react": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.68.0",
     "rollup-plugin-dts": "^4.1.0",
     "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "react": "^17.0.2"
   }
 }
